force-app/main/default/objects/BenevityMatchingSettings__c/BenevityMatchingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for Benevity employer matching gift creation. Controls which employee gift entries trigger a new employer gift entry and how that gift is constructed.</description>
    <label>Benevity Matching Settings</label>
</CustomObject>