force-app/main/default/objects/BenevityMatchingSettings__c/fields/DefaultPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>DefaultPaymentMethod__c</fullName>
    <description>Default value for the PaymentMethod field on newly created employer GiftEntry records. Applied only when PaymentMethod is not included in FieldsToCopy__c or when its copied value is blank. Must match a valid PaymentMethod picklist value (e.g. Check, Credit Card, EFT, Cash, In Kind, Other). Leave blank to rely entirely on FieldsToCopy__c.</description>
    <label>Default Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>