force-app/main/default/objects/BenevityMatchingSettings__c/fields/EmployeeGiftCondition__c.field-meta.xml
<CustomField>
    <fullName>EmployeeGiftCondition__c</fullName>
    <description>SOQL WHERE clause fragment that identifies eligible employee GiftEntry records. The batch appends this to its base query. Max 255 characters. Example: GEM_MatchAmount__c > 0 AND GEM_MatchingGiftCreated__c = false</description>
    <label>Employee Gift Condition (WHERE Clause)</label>
    <type>TextArea</type>
</CustomField>