force-app/main/default/objects/BenevityMatchingSettings__c/fields/EmployerIdPath__c.field-meta.xml
<CustomField>
    <fullName>EmployerIdPath__c</fullName>
    <description>SOQL dot-notation path to the employer Account Id on the employee donor's related Account record. The batch includes this in the SELECT clause and traverses it to find the employer. Example: Donor.Employer__c (for a standard relationship named Donor with a field Employer__c on Account). Supports multi-level paths: Donor.Parent.Employer__c</description>
    <label>Employer ID Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>