force-app/main/default/objects/BenevityMatchingSettings__c/fields/FieldsToCopy__c.field-meta.xml
<CustomField>
    <fullName>FieldsToCopy__c</fullName>
    <description>Semicolon-separated list of GiftEntry API field names whose values will be copied from the employee gift entry to the new employer gift entry. Max 255 characters. Example: GiftBatchId;GiftReceivedDate;CurrencyIsoCode;GiftDesignation1Id</description>
    <label>Fields To Copy (semicolon-separated)</label>
    <type>TextArea</type>
</CustomField>