force-app/main/default/objects/BenevityMatchingSettings__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the BenevityEmployerMatchingBatch will create employer gift entries. Uncheck to disable processing without deleting the configuration.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>