force-app/main/default/objects/BenevityMatchingSettings__c/fields/MatchAmountField__c.field-meta.xml
<CustomField>
    <fullName>MatchAmountField__c</fullName>
    <description>API name of the GiftEntry field that holds the employer matching gift amount imported from the Benevity Match Amount column. This field value becomes the GiftAmount on the new employer GiftEntry record. Example: GEM_MatchAmount__c</description>
    <label>Match Amount Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>