force-app/main/default/objects/BenevityMatchingSettings__c/fields/MatchFlagField__c.field-meta.xml
<CustomField>
    <fullName>MatchFlagField__c</fullName>
    <description>API name of a boolean (Checkbox) field on GiftEntry that will be set to true after the employer matching gift is created. Used in EmployeeGiftCondition__c to prevent reprocessing. Example: GEM_MatchingGiftCreated__c</description>
    <label>Match Flag Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>